v2/deployments/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: magic-flow
  labels:
    name: magic-flow
    app: magic-flow
    version: v2
